link name change

--- a/app/index.html
+++ b/app/index.html
@@ -20,7 +20,7 @@
 </head>
 <body>
 <ul class="menu">
-    <li><a href="#/boot">The boot</a></li>
+    <li><a href="#/boot">Meet Carmen</a></li>
     <li><a href="#/about">Some info about me</a></li>
 </ul>
 
