alterado o aspeto de carmen

--- a/app/about/about.html
+++ b/app/about/about.html
@@ -6,4 +6,5 @@
     </ui-gmap-marker>
 </ui-gmap-google-map>
 
-<p>E-mail: me@nfriacowboy.com</p>
+<p>E-mail: <a href="mailto:me@nfriacowboy.com?subject=Contact From NFRiaCowboy PlayGrounds">me@nfriacowboy.com</a></p>
+<p>Mobile: <a href="tel:+351912542247">+351 912 542 247</a></p>
