refactoring visual do boot e adicionado novos elementos no about

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 <body>
 <ul class="menu">
-    <li><a href="#/boot">The boot</a></li>
+    <li><a href="#/boot">Meet Carmen</a></li>
     <li><a href="#/about">Some info about me</a></li>
 </ul>
 
@@ -36,6 +36,8 @@
 <!-- In production use:
 <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
 -->
+
+<script   src="https://code.jquery.com/jquery-2.2.3.min.js"   integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo="   crossorigin="anonymous"></script>
 <script src='bower_components/lodash/dist/lodash.min.js'></script>
 
 <script src="bower_components/angular/angular.js"></script>
@@ -51,6 +53,7 @@
 <script src="components/version/version.js"></script>
 <script src="components/version/version-directive.js"></script>
 <script src="components/version/interpolate-filter.js"></script>
+<script src="directives/messageBotton.js"></script>
 
 <script type="text/javascript" src="components/meSpeak/mespeak.js"></script>
 <script type="text/javascript" src="components/elizabot/elizabot.js"></script>
