--- a/app/index.html
+++ b/app/index.html
@@ -46,6 +46,8 @@
 
 <script src='bower_components/angular-simple-logger/dist/angular-simple-logger.min.js'></script>
 <script src='bower_components/angular-google-maps/dist/angular-google-maps.min.js'></script>
+<script src="https://cdn.rawgit.com/Luegg/angularjs-scroll-glue/master/src/scrollglue.js"></script>
+
 
 <script src="app.js"></script>
 <script src="boot/boot.js"></script>
@@ -53,7 +55,6 @@
 <script src="components/version/version.js"></script>
 <script src="components/version/version-directive.js"></script>
 <script src="components/version/interpolate-filter.js"></script>
-<script src="directives/messageBotton.js"></script>
 
 <script type="text/javascript" src="components/meSpeak/mespeak.js"></script>
 <script type="text/javascript" src="components/elizabot/elizabot.js"></script>
